--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         <h1>{{ title }}</h1>
         <p class="message">{{ message }}</p>
     </div>
+    <div id="example">
+        <h1 v-text="title"></h1>
+        <img v-bind:src="img.src" v-bind:alt="img.alt">
+        <p class="message">{{ message }}</p>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
     <script src="app.js"></script>
 </body>
