--- a/accordion/index.html
+++ b/accordion/index.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
-    <title>Hello Vue!</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+  <title>Treehouse Library</title>
 </head>
 <body>
-   
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
-    <script src="app.js"></script>
+  <div class="container">
+    <div id="media-list">
+      <h1>{{ title }}</h1>
+      <select>
+        <option>Select a type of media...</option>
+      </select>
+       <ul>
+        <li>
+          <h3>Media Title</h3> 
+          <div>
+            <p>Media Description</p>
+            <p class="byline">By: Media Contributor</p>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
