--- a/accordion/index.html
+++ b/accordion/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
-  <title>Treehouse Library</title>
+  <title>The Library</title>
 </head>
 <body>
   <div class="container">
@@ -16,11 +16,11 @@
         <option>Select a type of media...</option>
       </select>
        <ul>
-        <li>
-          <h3>Media Title</h3> 
-          <div>
-            <p>Media Description</p>
-            <p class="byline">By: Media Contributor</p>
+        <li v-for="(media, index) in mediaList" v-on:click="toggleDetails(index)">
+          <h3>{{ media.title }}</h3> 
+          <div v-show="media.showDetail">
+            <p>{{ media.description }}</p>
+            <p class="byline">By: {{ media.contributor }}</p>
           </div>
         </li>
       </ul>
