--- a/accordion/index.html
+++ b/accordion/index.html
@@ -12,11 +12,16 @@
   <div class="container">
     <div id="media-list">
       <h1>{{ title }}</h1>
-      <select>
+      <select v-on:change="filterList">
         <option>Select a type of media...</option>
+        <option v-for="option in options">{{ option }}</option>
       </select>
        <ul>
-        <li v-for="(media, index) in mediaList" v-on:click="toggleDetails(index)">
+        <li 
+        v-show="media.type === type || type ==='Select a type of media...'" 
+        v-for="(media, index) in mediaList" 
+        v-on:click="toggleDetails(index)"
+        >
           <h3>{{ media.title }}</h3> 
           <div v-show="media.showDetail">
             <p>{{ media.description }}</p>
