--- a/flashcards/index.html
+++ b/flashcards/index.html
@@ -11,17 +11,17 @@
 <body>
   <div id="flashcard-app" class="container">
 
-    <h1>Flashcard App!</h1>
+    <h1>Flashcard Apps</h1>
 
     <div class="flashcard-form">
       <label for="front">Front
-        <input type="text" id="front">
+        <input v-model="newFront" type="text" id="front">
       </label>
       <label for="back">Back
-        <input type="text" id="back">
+        <input v-model="newBack" type="text" id="back">
       </label>
-      <button>Add a New Card</button>
-      <span class="error">Oops! Flashcards need a front and a back.</span>
+      <button v-on:click="addNewCard()">Add a New Card</button>
+      <span v-show="error" class="error">Oops! Flashcards need a front and a back.</span>
     </div>
 
     <ul class="flashcard-list">
