--- a/flashcards/index.html
+++ b/flashcards/index.html
@@ -25,14 +25,14 @@
     </div>
 
     <ul class="flashcard-list">
-      <li v-on:click="toggleCard(card)" v-for="card in cards">
+      <li v-on:click="toggleCard(card)" v-for="(card, index) in cards">
         <p class="card" v-if="!card.flipped">
           {{card.front}}
-            <span class="delete-card">X</span>
+            <span v-on:click="cards.splice(index, 1)" class="delete-card">X</span>
         </p>
         <p class="card" v-else>
           {{card.back}}
-            <span class="delete-card">X</span>
+            <span v-on:click="cards.splice(index, 1)" class="delete-card">X</span>
         </p>
       </li>
     </ul>
